gcc/testsuite/g++.dg/pr46852.C
// PR c++/46852
// { dg-do compile }

template
<
class
{ // { dg-error "" }
